css/style.css
/* ******************************* GLOABAL STYLES ****************************** */

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');

:root{
    --mainFont: 'Montserrat', sans-serif;
    --primaryColor: #48494D;
    --secondaryColor: #AD997B;
}
body {
    background-color: var(--primaryColor);
    color: var(--secondaryColor);
    font-family: var(--mainFont);
} 
.hidden { 
    display: none !important;
}

.button {
    color: red;
}




/* ******************************* NAVBAR ****************************** */
/* dropdown menu */
.btn {
    /* border: 2px solid red; */
    color: var(--secondaryColor);
    font-size: .5em;
}
.btn:hover {
    color: var(--secondaryColor);
    transform: scale(1.2);
}
.dropdown {
    /* border: 2px solid red; */
    display: flex;
    justify-content: flex-end;
}

.dropdown-menu {
    background-color: var(--primaryColor);
}
.dropdown-item {
    /* border: 2px solid red; */
    cursor: pointer;
    color: var(--secondaryColor);
    font-size: .5em;
}
.dropdown-item:hover {
    background-color: var(--secondaryColor);
}


/* ******************************* MAIN ********************************** */
 #container {
    /* border: 2px solid red; */
    height: 60vh;
    width: 100%;
    display: flex;
    justify-content: center;
    overflow: hidden;
} 

#my-logo {
    transform: scale(1.2);
}

.name-title {
    text-transform: uppercase;
    font-size: .9em;
    margin-top: 20px;
}

/* ******** LOGO AND NAME ******** */
.logo-assets-container {
    /* border: 2px solid red; */
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    bottom: 45vh;
}


/* ******************************* CARD STYLING ******************************* */

/* card image styling */
.card-image {
    /* width: 40vw; */
    /* height: auto; */
    padding: 10px;
}

/* card background */
sl-card::part(base) {
    /* border: 2px solid red; */
    display: flex;
    align-items: center;
    border: none;    
}

/* card body styling..under image */
sl-card::part(body) {
    /* border: 2px solid red; */
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: var(--primaryColor);
    width: 100%;
}

/* .button__label span::part(label) {
    border: 2px solid red;
    background-color: red;
} */
.card-heading {
    font-size: 1em;
    display:flex;
    align-items: center;
    margin: 3px 20px 0 0;
    text-transform: uppercase;
}

/* ************************* CLOSE BUTTON ******************* */
.button-housing {
    /* border: 5px solid hotpink; */
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 47em;
    left: 8.5em;
}

.close-button {
    height: 25px;
    width: 60px;
    border: none;
    border-radius: 2px;
    background-color: var(--secondaryColor);
    text-transform: uppercase;
    font-size: .5em;
}

.close-button:hover {
    transform: scale(1.1)
}


/* ************************* ABOUT ME ******************* */
.display-about {
    /* border: 2px solid red; */
    text-align: center;
    position: relative;
    top: -8em;
    width: 80%;
    margin: 0 auto;
}
.about-me-copy {
    font-size: 1em;
    line-height: 1.6em;
}






/* ******************************* MEDIA QUERIES ******************************* */
/* ******************************* MEDIA QUERIES ******************************* */
/* ******************************* MEDIA QUERIES ******************************* */
@media screen and (min-width: 1024px) {
/* ************* NAV DROPDOWN *********** */
    .dropdown {
        /* border: 3px solid red; */
        justify-content: center;
        height: 40px;
     }
     
     .btn {
        /* border: 2px solid red; */
        font-size: .8`em;
    }

     .logo-header {
        /* border: 2px solid red; */
        display: flex;
        align-items: center;
     }
      .name-title {
          white-space: nowrap;
     }

/* ******** Logo image and name div ******** */
    .logo-assets-container {
        /* border: 2px solid red; */
        display: flex;
        flex-direction: row;
        justify-content: center;
    }
    .media-logos {
        /* border: 2px solid red; */
        display: flex;
        flex-direction: column;
        list-style-type: none;
        position: relative;
        padding-left: 80px;
        transform: scale(.4);
    }
    #card-container {
        /* border: 2px solid red; */
        /* background-color: salmon; */
        display: flex;
        justify-content: space-evenly;
        height: 1000px;
        flex-wrap: wrap;
        /* overflow: hidden; */
    } 
    .main-card {
        width: 40vw;
        display:flex;
        justify-content: center;
    }

    #my-logo {
        /* border: 2px solid rgb(207, 250, 114); */
        margin-right: 40px;
    }

    .name-title {
        /* border: 2px solid rgb(207, 250, 114); */
        text-transform: uppercase;
        font-size: .9em;
    }

    .logo-assets-container {
        /* border: 2px solid red; */
        display: flex;
        /* justify-content: flex-start; */
    }

    .media-logos {
        /* border: 2px solid rgb(207, 250, 114); */
        padding-left: 0px
    }





    /* ************************ CLEAR BUTTON ************** */
    /* .button-housing {
        border: 5px solid hotpink;
        height: 50px;
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
        bottom: 66em;
    } */
    
    
    /* .close-button {
        height: 25px;
        width: 60px;
        border: none;
        border-radius: 2px;
        background-color: var(--secondaryColor);
        text-transform: uppercase;
        font-size: .5em;
    }
    
    .close-button:hover {
        transform: scale(1.1)
    } */


} 
/* *********************** CONTACT FORM ************************ */
.form-container {
    /* border: 2px solid red; */
    width: 75%;
    margin: 0 auto;
    position: relative;
    bottom: 5em;
    padding: 0px;
}
.form-group input {
    background-color: var(--primaryColor);
    border: 1.7px solid var(--secondaryColor);
    opacity: .6;
}

.form-group {
    color: var(--secondaryColor);
    text-transform: uppercase;
    font-size: .8em;
    padding: 15px 0;
}
.submit-button {
    background-color: var(--secondaryColor);
    color: var(--primaryColor);
    border: none;
    border-radius: 3px;
    text-transform: uppercase;
    width: 8em;
    height: 2.5em;
    font-size: .7em;
}

